Preparando para deploy

--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
-  "name": "transmissor",
+  "name": "audio-transmitter",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "Transmissor de áudio para transmissão esportiva",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "express": "^4.21.2",
-    "socket.io": "^4.8.1"
+    "express": "^4.17.1",
+    "socket.io": "^4.5.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
